--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Puneet Aggarwal</title>
+	<style type="text/css">
+		body{
+			background-image: url("tt.jpg");
+			background-repeat: no-repeat;
+		}
+	</style>
+</head>
+<body>
 
-hello World 2
+</body>
+</html>
