font changes and applied typed js framework on first two sentences

--- a/christmas.html
+++ b/christmas.html
@@ -53,7 +53,7 @@
         left: -50%;
         /*width: 180em;*/
         margin-top: 6em;
-        border-style: solid;
+        /*border-style: solid;*/
         border-color: white ;
         border-radius: 2em ;
         align-items: center;
@@ -77,7 +77,7 @@
         font-size: 6em;
         width: 80%;
         border-radius: 0.7em ;
-        background-color: #F44336;
+        /*background-color: #F44336;*/
         color: white;
         align-items: center;
         text-align: center;
@@ -130,6 +130,14 @@
       #post{
         font-size: 3em;
       }
+
+      .foo {
+        background: #F44336;
+        -webkit-transition:background 1s;
+        -moz-transition:background 1s;
+        -o-transition:background 1s;
+        transition:background 1s
+      }
     </style>
     
 </head>
@@ -139,10 +147,10 @@
   
   </canvas>
     <div id="main-content">
-  <div id="first">wishing you a very ...</div>
-  <div id="mc"><b>Merry Christmas</b></div>
+  <div id="first"></div>
+  <div id="mc"></div>
   <br>
-    <div id="greet">Greetings</div>
+    <div id="greet"></div>
     <div id="poem">
     <h2>The Gift of Love.</h2>
     <h2>The Gift of Peace.</h2>
