changing the message of the christmas

--- a/christmas.html
+++ b/christmas.html
@@ -152,15 +152,14 @@
   <br>
     <div id="greet"></div>
     <div id="poem">
-    <h2>The Gift of Love.</h2>
-    <h2>The Gift of Peace.</h2>
-    <h2>The Gift of Happiness.</h2>
-    <h2>May All These Be Yours</h2>
-    <h2>At Christmas</h2>
+    <h2 id="line1"></h2>
+    <h2 id="line2"></h2>
+    <h2 id="line3"></h2>
+    <h2 id="line4"></h2>
+    <h2 id="line5"></h2>
     </div><br>
     <div id="post-div">
       <div id="post" class="shine">
-      By Puneet
       </div>
     </div>
   </div>
