some changing of fonts

--- a/christmas.html
+++ b/christmas.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
  
 
@@ -118,13 +119,13 @@
       #post-div{
         margin: 1em;
         padding: 1.2em;
-        background-color: #E91E63;
+        /*background-color: #E91E63;*/
         width: 16em;
         position: relative;
         left: 70%;
         border-radius: 5em;
         text-align: center;
-        font-family: 'Ruge Boogie', cursive;
+        font-family: 'Pacifico', cursive;
       }
 
       #post{
@@ -136,7 +137,23 @@
         -webkit-transition:background 1s;
         -moz-transition:background 1s;
         -o-transition:background 1s;
-        transition:background 1s
+        transition:background 1s;
+      }
+
+      .bar {
+        background: #E91E63;
+        -webkit-transition:background 1s;
+        -moz-transition:background 1s;
+        -o-transition:background 1s;
+        transition:background 1s;
+      }
+
+      .border{
+        border-style: solid;
+        -webkit-transition:background 1s;
+        -moz-transition:background 1s;
+        -o-transition:background 1s;
+        transition:background 1s;
       }
     </style>
     
