some minor changes

--- a/christmas.html
+++ b/christmas.html
@@ -57,9 +57,10 @@
         /*border-style: solid;*/
         border-color: white ;
         border-radius: 2em ;
+        border-width: 5;
         align-items: center;
         color: white;
-        padding: 3em;
+        padding: 5em;
       }
       #first{
         font-size: 3em;
@@ -118,11 +119,11 @@
 
       #post-div{
         margin: 1em;
-        padding: 1.2em;
+        padding: 1em;
         /*background-color: #E91E63;*/
-        width: 16em;
+        width: 19em;
         position: relative;
-        left: 70%;
+        left: 60%;
         border-radius: 5em;
         text-align: center;
         font-family: 'Pacifico', cursive;
@@ -154,6 +155,10 @@
         -moz-transition:background 1s;
         -o-transition:background 1s;
         transition:background 1s;
+      }
+
+      .weight{
+        font-weight: 600 ;
       }
     </style>
     
