border thicking and font weighting

--- a/christmas.html
+++ b/christmas.html
@@ -151,6 +151,7 @@
 
       .border{
         border-style: solid;
+        border-width: thick;
         -webkit-transition:background 1s;
         -moz-transition:background 1s;
         -o-transition:background 1s;
