some changes in the cavas

--- a/christmas.html
+++ b/christmas.html
@@ -164,16 +164,17 @@
     </style>
     
 </head>
-
-<body>
-<canvas id="canvas">
+<canvas id="canvas" style="position:relative;left:30%;">
   
   </canvas>
+
+<body>
+
     <div id="main-content">
   <div id="first"></div>
   <div id="mc"></div>
   <br>
-    <div id="greet"></div>
+    <div id="greet"></div><br>
     <div id="poem">
     <h2 id="line1"></h2>
     <h2 id="line2"></h2>
