--- a/christmas.html
+++ b/christmas.html
@@ -3,6 +3,7 @@
 <head>
   <title>Merry Christmas</title>
    <!-- Compiled and minified CSS -->
+    <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
