--- a/newyear.html
+++ b/newyear.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Merry Christmas</title>
+  <title>Happy New Year</title>
    <!-- Compiled and minified CSS -->
     <link rel="icon" href="images/icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Parisienne" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Ruge+Boogie" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Sofia" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
  
 
@@ -71,8 +72,8 @@
       #mc{
         position: relative;
         left: 3%;
-        font-size: 7.2em;
-        font-family: 'Mountains of Christmas', cursive;
+        font-size: 6em;
+        font-family: 'Sofia', cursive;
       }
       #greet{
         position: relative;
