add link icon for new year

--- a/newyear.html
+++ b/newyear.html
@@ -3,7 +3,7 @@
 <head>
   <title>Happy New Year</title>
    <!-- Compiled and minified CSS -->
-    <link rel="icon" href="images/icon.png">
+    <link rel="icon" href="images/hny.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Mountains+of+Christmas" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
