some color changes

--- a/newyear.html
+++ b/newyear.html
@@ -195,6 +195,15 @@
         transition:background 1s;
         background: #3F51B5;
       }
+      
+      .col5{
+        
+        -webkit-transition:background 1s;
+        -moz-transition:background 1s;
+        -o-transition:background 1s;
+        transition:background 1s;
+        background: #303F9F;
+      }
 
 
       .weight{
