--- a/newyear.html
+++ b/newyear.html
@@ -71,6 +71,7 @@
       }
       #mc{
         position: relative;
+        text-align:center;
         left: 3%;
         font-size: 6em;
         font-family: 'Sofia', cursive;
