--- a/newyear.html
+++ b/newyear.html
@@ -62,9 +62,10 @@
         border-width: 5;
         align-items: center;
         color: white;
-        padding: 5em;
+        padding: 3em ;
       }
       #first{
+        text-align : center;
         font-size: 3em;
         width: 16em;
         font-family: 'Homemade Apple', cursive;
