--- a/index2.html
+++ b/index2.html
@@ -1,19 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script type="text/javascript"> -->
+		window.onload = function() {
+			// Animate loader off screen
+			// alert("haha") ;
+			$(".se-pre-con").fadeOut("slow");;
+		};
+	<!-- </script>
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<title>Puneet Aggarwal</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+  <link href="bower_components/animate.css/animate.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div class="fullscreen-bg">
-    <video loop muted autoplay poster="img/hny.png" class="fullscreen-bg__video">
-        <!-- <source src="video/big_buck_bunny.webm" type="video/webm">
-        <source src="video/big_buck_bunny.mp4" type="video/mp4"> -->
-        <source src="video/out-5.ogv" type="video/ogg">
-    </video>
-		<div class="tint">
-			
+	<!-- -------------------------  loader division --------------------------- -->
+	<div class="se-pre-con"></div>
+	<button class="buttonPink topRight"><i class="fa fa-download" aria-hidden="true"></i>  Resume</button>
+	<!-- -------------------------  basic info division ----------------------- -->
+  <div id="basic-info" class="container" style="width: 60%; margin-top: 10%;">
+		<!-- -------  tinted video  ------- -->
+		<div class="fullscreen-bg">
+	    <video loop muted autoplay poster="images/hny.png" class="fullscreen-bg__video">
+	        <source src="video/big_buck_bunny.webm" type="video/webm">
+	        <source src="video/big_buck_bunny.mp4" type="video/mp4">
+	        <source src="video/out-5.ogv" type="video/ogg">
+	    </video>
+			<div class="tint">
+			</div>
 		</div>
-</div>
+		<!-- -------- heading   ------- -->
+		<div class="roboto content text-center">
+			<h2 style="color : white; font-size: 80px; font-weight:lighter;">puneet222.github.io</h2>
+			<br>
+			<!-- --------   content   --------- -->
+			<h4 class="text-center" style="color : white; font-size: 20px; font-weight:lighter; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal. Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh.</h4>
+		</div>
+	</div>
 </body>
 </html>
