some view changes

--- a/index2.html
+++ b/index2.html
@@ -12,6 +12,8 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<title>Puneet Aggarwal</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive" rel="stylesheet">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
@@ -19,9 +21,14 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<!-- -------------------------  loader division --------------------------- -->
+	<!-- --------------------------------------------------------------------------------  loader division --------------------------------------------------------- -->
 	<div class="se-pre-con"></div>
+	<!-- -------------------------  Resume button --------------------------- -->
 	<button class="buttonPink topRight"><i class="fa fa-download" aria-hidden="true"></i>  Resume</button>
+	<!-- -------------------------  Daily Notes --------------------------- -->
+	<div id="notes">
+		<h3 class="text-center" style="font-family: 'Handlee', cursive;"><b>Notes</b></h3>
+	</div>
 	<!-- -------------------------  basic info division ----------------------- -->
   <div id="basic-info" class="container" style="width: 60%; margin-top: 10%;">
 		<!-- -------  tinted video  ------- -->
@@ -35,11 +42,12 @@
 			</div>
 		</div>
 		<!-- -------- heading   ------- -->
-		<div class="roboto content text-center">
-			<h2 style="color : white; font-size: 80px; font-weight:lighter;">puneet222.github.io</h2>
+		<div class="roboto">
+			<h2 class="text-center" style="color : white; font-size: 6em; font-weight:lighter;">puneet222.github.io</h2>
 			<br>
 			<!-- --------   content   --------- -->
-			<h4 class="text-center" style="color : white; font-size: 20px; font-weight:lighter; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal. Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh.</h4>
+			<h4 class="text-center" style="color : white; font-size: 20px; font-weight:lighter; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal.
+				 Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh.</h4>
 		</div>
 	</div>
 </body>
