added pagepiling bower

--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script type="text/javascript">
 		window.onload = function() {
 			// Animate loader off screen
@@ -12,7 +14,7 @@
 	</script>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="frameworks/pagepiling/jquery.pagepiling.min.js"></script>
+	<script src="bower_components/pagePiling.js/jquery.pagepiling.min.js"></script>
 	<title>Puneet Aggarwal</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
@@ -20,7 +22,7 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link href="bower_components/components-font-awesome/css/font-awesome.min.css" rel="stylesheet" />
-	<link href="frameworks/pagepiling/jquery.pagepiling.min.css" rel="stylesheet">
+	<link href="bower_components/pagePiling.js/jquery.pagepiling.css" rel="stylesheet">
   <link href="bower_components/animate.css/animate.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -68,10 +70,10 @@
 					<!-- --------   content   --------- -->
 					<div id="heading" class="animated slideInUp">
 						<p class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
-						<p class="text-right" style="color: white; font-size: 1.5em; font-weight: 100">( Full Stack Developer )</p>
+						<p class="text-right" style="color: white; font-size: 1.5vw; font-weight: 100">( Full Stack Developer )</p>
 					</div>
 					<br>
-					<h4 class="text-center animated zoomIn" style="color : white; font-size: 20px; font-weight:300; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal.
+					<h4 class="text-center animated zoomIn" style="color : white; font-size: 1.5vw; font-weight:300; letter-spacing: 2px;">Hello! My name is Puneet Aggarwal.
 						Currently I'm pursuing B.E. (Computer Science) from PEC Unversity of Technology, Chandigarh. I'm very enthusiastic about web development, and always very
 						interested to learn about latest technologies. I also like to read blogs and sometimes inmy free time I use to do sketching, painting. I'm also a
 						TV Series addict and love to read novels.</h4>
