--- a/index2.html
+++ b/index2.html
@@ -9,8 +9,9 @@
 			// alert("haha") ;
 			$(".se-pre-con").fadeOut("slow" , function(){
 				$("#heading").addClass("animated slideInUp") ;
-			});;
+			});
 		};
+
 	</script>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -76,8 +77,10 @@
 		</div>
 		<div class="section" style="background-color: #009688" id="skills">
 			<div id="particles" style="position: relative;">
-				<div id="intro">
-					<h1>Particleground</h1>
+				<div id="intro" class="text-center">
+					<div >
+						<h1 id="" class="skills" style="position: fixed ; top: 3% ; left: 45% ;color: white ; font-size: 3.6vw; font-weight: 300;border-bottom: 2px solid white";><b>SKILLS</b></h1>
+					</div>
 					<!-- <p>A JavaScript plugin for snazzy background particle systems</p> -->
 				</div>
 			</div>
