long time animation

--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
 			// Animate loader off screen
 			// alert("haha") ;
 			$(".se-pre-con").fadeOut("slow" , function(){
-				$("#heading").addClass("animated slideInUp") ;
+				$("#heading").addClass("animated slideInUp" , 2500) ;
 			});
 		};
 
