--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
 			// alert("haha") ;
 			$(".se-pre-con").fadeOut("slow" , function(){
 				$("#heading").addClass("animated slideInUp" , 2500) ;
+				$("#headName").addClass("sliding-middle-out") ;
 			});
 		};
 
@@ -61,7 +62,7 @@
 				<div class="">
 					<!-- --------   content   --------- -->
 					<div id="heading" class="animated slideInUp">
-						<p class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
+						<p id="headName" class="text-center" style="color : white; font-size: 7vw; font-weight:lighter; margin: 0px;">puneet222.github.io</p>
 						<p class="text-right" style="color: white; font-size: 1.5vw; font-weight: 100">( Full Stack Developer )</p>
 					</div>
 					<br>
@@ -79,7 +80,7 @@
 			<div id="particles" style="position: relative;">
 				<div id="intro" class="text-center">
 					<div >
-						<h1 id="" class="skills" style="position: fixed ; top: 3% ; left: 45% ;color: white ; font-size: 3.6vw; font-weight: 300;border-bottom: 2px solid white";><b>SKILLS</b></h1>
+						<h1 id="" class="skills" style="position: fixed ; top: 3% ; left: 45% ;color: white ; font-size: 3.6vw; font-weight: 300;"><b>SKILLS</b></h1>
 					</div>
 					<!-- <p>A JavaScript plugin for snazzy background particle systems</p> -->
 				</div>
