--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
 
 <!-- --------------------------------  MY scripts   ----------------------------------   -->
 	<script src="js/adminApp.js"></script>
-	<script src="js/portfolio.js"></script>
+	<script src="js/portfolioController.js"></script>
 	<script src="js/tempController.js"></script>
 
 
