--- a/sideProjects/qiqi/index.html
+++ b/sideProjects/qiqi/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="theme-color" content="#3F51B5">
   <link href="css/style.css" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet" />
