--- a/sideProjects/qiqi/index.html
+++ b/sideProjects/qiqi/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"> 
   <meta name="theme-color" content="#3F51B5">
   <link href="css/style.css" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
