--- a/sideProjects/qiqi/index.html
+++ b/sideProjects/qiqi/index.html
@@ -14,7 +14,7 @@
   <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
   <script src="js/script.js"></script>
 </head>
-<body>
+<body style="width: 99%;">
 <div class="main-div">
   <div class="pull-left" id="setting">
     <img src="images/settings.png" class="img-responsive" style="position : absolute; top: 3em; left: 3em; height: 5em; width : 5em;" />
